--- a/manifest.json
+++ b/manifest.json
@@ -1,69 +1,38 @@
 {
-    "name": "Gestionnaire de Dépenses",
-    "short_name": "Dépenses",
-    "description": "Application de gestion des dépenses personnelles",
-    "start_url": "/dashboard",
+    "name": "Coins Manage",
+    "short_name": "Gestion de dépense",
+    "description": "Gestionnaire de dépenses personnel",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#4158D0",
     "theme_color": "#4158D0",
-    "orientation": "any",
+    "orientation": "portrait",
     "icons": [
-        {
-            "src": "/icons/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-128x128.png",
-            "sizes": "128x128",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
         {
             "src": "/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "maskable"
         },
         {
             "src": "/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "maskable"
         }
     ],
+    "categories": ["finance", "utilities"],
+    "screenshots": [],
     "shortcuts": [
         {
-            "name": "Nouvelle Transaction",
+            "name": "Nouvelle Dépense",
             "short_name": "Ajouter",
-            "description": "Ajouter une nouvelle transaction",
-            "url": "/dashboard?action=new",
+            "description": "Ajouter une nouvelle dépense",
+            "url": "/?action=new",
             "icons": [{ "src": "/icons/add-72x72.png", "sizes": "72x72" }]
         }
-    ]
+    ],
+    "lang": "fr",
+    "dir": "ltr",
+    "prefer_related_applications": false
 } 
