--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,62 @@
 {
-    "name": "Coins Manage",
-    "short_name": "Gestion de dépense",
-    "description": "Gestionnaire de dépenses personnel",
-    "start_url": "/",
+    "name": "Gestionnaire de Dépenses",
+    "short_name": "Dépenses",
+    "description": "Application de gestion des dépenses personnelles",
+    "start_url": "/dashboard",
     "display": "standalone",
     "background_color": "#4158D0",
     "theme_color": "#4158D0",
-    "orientation": "portrait",
+    "orientation": "portrait-primary",
     "icons": [
         {
+            "src": "/icon.svg",
+            "type": "image/svg+xml",
+            "sizes": "512x512",
+            "purpose": "any"
+        },
+        {
             "src": "/icons/icon-192x192.png",
-            "sizes": "192x192",
             "type": "image/png",
-            "purpose": "maskable"
+            "sizes": "192x192",
+            "purpose": "any"
         },
         {
             "src": "/icons/icon-512x512.png",
-            "sizes": "512x512",
             "type": "image/png",
+            "sizes": "512x512",
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/maskable-icon.png",
+            "type": "image/png",
+            "sizes": "512x512",
             "purpose": "maskable"
         }
     ],
-    "categories": ["finance", "utilities"],
-    "screenshots": [],
     "shortcuts": [
         {
-            "name": "Nouvelle Dépense",
+            "name": "Ajouter une transaction",
             "short_name": "Ajouter",
-            "description": "Ajouter une nouvelle dépense",
-            "url": "/?action=new",
-            "icons": [{ "src": "/icons/add-72x72.png", "sizes": "72x72" }]
+            "description": "Ajouter une nouvelle transaction",
+            "url": "/dashboard?action=add",
+            "icons": [{ "src": "/icons/add-icon.png", "sizes": "192x192" }]
         }
     ],
+    "screenshots": [
+        {
+            "src": "/icons/screenshot1.png",
+            "type": "image/png",
+            "sizes": "1280x720",
+            "form_factor": "wide"
+        },
+        {
+            "src": "/icons/screenshot2.png",
+            "type": "image/png",
+            "sizes": "750x1334",
+            "form_factor": "narrow"
+        }
+    ],
+    "categories": ["finance", "productivity", "utilities"],
     "lang": "fr",
-    "dir": "ltr",
-    "prefer_related_applications": false
+    "dir": "ltr"
 } 
